--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
 		<li>现招聘：编书组3人，剧本组4人，视频组1人，设计组2人</li>
 	</div>
 	<div class = "a">
-		<a href = "#">返回</a>
+		<a href = "https://dian1121.github.io/xiaoke_home/">返回</a>
 	</div>
 </html>
